--- a/src/components/Main-Section/Card/styles.css
+++ b/src/components/Main-Section/Card/styles.css
@@ -1,25 +1,48 @@
+.card-container{
+    display: flex;
+    padding: 30px;
+    justify-content: space-between;
+    transition: all 1s ease;
+
+    /* &:hover{
+        transform: scale(1.1);
+    } */
+}
+
+.card-container :hover {
+    transform: scale(1.1);
+}
+
+
 .card {
+    display: grid;
     width: 30%;
     padding: 20px;
-    box-shadow: 10px 5px 500px #f0f0f0;
+    box-shadow: 10px 5px 50px lightgray;
     border-radius: 10px;
 }
 
 .top-section {
-    display: grid;
-    grid-template-columns: 1fr 3.5fr;
+    display: flex;
+    align-items: center;
+    /* grid-template-columns: 1fr 3.5fr; */
     margin-bottom: 20px;
+    /* justify-content: space-between; */
+    gap: 20px;
 }
 
 .top-section img {
-    width: 60px;
-    height: 60px;
+    display: flex;
+    width: 50px;
+    height: 50px;
     border-radius: 10%;
 }
 
 .top-section-text {
+    
     align-self: center;
     line-height: 1.7;
+    justify-content: center;
 }
 
 .middle-section {
