--- a/src/components/Main-Section/Card/styles.css
+++ b/src/components/Main-Section/Card/styles.css
@@ -16,7 +16,7 @@
 
 .card {
     display: grid;
-    width: 30%;
+    width: 400px;
     padding: 20px;
     box-shadow: 10px 5px 50px lightgray;
     border-radius: 10px;
